# dreamscape

./: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 43bd000b6db1_add_score_to_analyses.py  4c500d3a38da_add_pgvector_and_embedding_column.py  63d02157e221_add_agent_type_and_model_used.py  97477f3ec488_initial_tables.py
app/: main.py
app/agents/: base_agent.py  emotion_specialist.py  generalist_agent.py  rating_agent.py  simple_analyzer.py  symbol_specialist.py  synthesizer_agent.py  theme_specialist.py
app/api/v1/: dreams.py  router.py
app/core/: config.py  database.py  deps.py  llm_client.py  models_config.py  ollama.py
app/db/: base.py
app/db/models/: analysis.py  dream.py
app/schemas/: analysis.py  dream.py
app/services/: analysis_service.py  dream_service.py
app/ui/: embeddings.py  gradio_app.py  handlers.py  whisper.py
app/workflows/: dream_analysis.py  nodes.py  state.py
docs/: development-workflow.md  docker.md  roadmap.md
